--- a/vchips/package.json
+++ b/vchips/package.json
@@ -15,7 +15,8 @@
     "react-dnd-touch-backend": "^14.1.1",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
